--- a/module_d/exercise002/estilo.css
+++ b/module_d/exercise002/estilo.css
@@ -10,6 +10,7 @@ header{
 
 section{
     background: whitesmoke;
+    text-align: center;
     border-radius: 10px;
     padding: 15px;
     width: 500px;
