--- a/module_f/exercise07/estilo.css
+++ b/module_f/exercise07/estilo.css
@@ -19,6 +19,10 @@ section{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
 }
 
+div#resultado{
+    font: normal 12pt Arial
+}
+
 footer{
     color: whitesmoke;
     font: italic 15pt Arial;
